workspace/log/build_2024-11-08_15-43-15/template_drone_control/stderr.log
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/template_drone_control_node.cpp: In member function ‘void TemplateDroneControl::move(const string&, double, const string&)’:
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/template_drone_control_node.cpp:115:62: error: cannot convert ‘const double’ to ‘const TemplateDroneControl::Point2D&’
  115 |                 transformedPoint.x = transformPoint(waypoint.x);
      |                                                     ~~~~~~~~~^
      |                                                              |
      |                                                              const double
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/template_drone_control_node.cpp:92:43: note:   initializing argument 1 of ‘TemplateDroneControl::Point2D TemplateDroneControl::transformPoint(const TemplateDroneControl::Point2D&)’
   92 |     Point2D transformPoint(const Point2D& point) {
      |                            ~~~~~~~~~~~~~~~^~~~~
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/template_drone_control_node.cpp:116:62: error: cannot convert ‘const double’ to ‘const TemplateDroneControl::Point2D&’
  116 |                 transformedPoint.y = transformPoint(waypoint.y);
      |                                                     ~~~~~~~~~^
      |                                                              |
      |                                                              const double
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/template_drone_control_node.cpp:92:43: note:   initializing argument 1 of ‘TemplateDroneControl::Point2D TemplateDroneControl::transformPoint(const TemplateDroneControl::Point2D&)’
   92 |     Point2D transformPoint(const Point2D& point) {
      |                            ~~~~~~~~~~~~~~~^~~~~
make[2]: *** [CMakeFiles/template_drone_control_node.dir/build.make:63: CMakeFiles/template_drone_control_node.dir/src/template_drone_control_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:105: CMakeFiles/template_drone_control_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
